# deep-learning

./: .gitignore  CMakeLists.txt  README.md
activations/: relu.py  softmax.py
algorithms/: sgd.py
examples/: mnist_mlp_training.ipynb  mnist_mlp_training_cuda.ipynb
kernels/: fully_connected.cuh  fully_connected_bw.cu  fully_connected_fw.cu  fully_connected_launcher.cu  fully_connected_wrapper.cpp  matmul.cu  matmul_wrapper.cpp  module.cpp  relu_fw.cu
layers/: fully_connected.py  fully_connected_cuda.py
loss_functions/: cross_entropy.py
models/: mlp.py  mlp_cuda.py
